# risk-league

./: .gitignore  README.md  dump.rdb  package-lock.json  package.json
.github/workflows/: deploy.yml  migrate.yml
api/: package-lock.json  package.json  ranks.ts
api/src/: express.d.ts  index.ts  redis.ts  types.ts
client/: app.json  endpoints.ts  global.css  package-lock.json  package.json  tailwind.config.js
client/android/: settings.gradle
client/app/: _layout.tsx  banner-locker.tsx  career.tsx  create-dynasty-league.tsx  forgot-password.tsx  (+13 more)
data-pipeline/: .gitignore  Cargo.toml
data-pipeline/src/: config.rs  database.rs  lib.rs  redis_client.rs
db/: initial.dump  readme.md  schema.sql
drizzle/: package-lock.json
engine/: .dockerignore  Dockerfile  prop_generation.md  pyproject.toml  readme.md
engine/deploy/: railway-deployment.md  readme.md
engine/mlb/: constants.py  create_props.py  my_types.py  prop_configs.py  prop_generator.py  sync_props.py  update_players.py  update_stats.py  utils.py
engine/mlb/scripts/: get_previous_day_data.py  update_players.py
engine/mlb/scripts/prop_generation/: eligibility.py  main.py
engine/nba/: constants.py  create_props.py  my_types.py  prop_configs.py  prop_generator.py  sync_props.py  tables.py  update_players.py  update_stats.py  utils.py
engine/nba/daemons/: sync_props.py
engine/nba/scripts/: get_previous_day_data.py  update_players.py
engine/nba/scripts/init_data/: init_games.py  init_player_stats.py  init_players.py  init_teams.py
engine/nba/scripts/prop_generation/: eligibility.py  generate_props.py  main.py  readme.md  regression.py
engine/nba/tests/: unit_tests.py
engine/railway/: create-props-mlb.json  create-props-nba.json  cron-scheduler.json  cron_scheduler.py  resolve-matches.json  resolve-parlay-picks.json  resolve-parlays.json  sync-props-mlb.json  sync-props-nba.json  update-players-mlb.json  update-players-nba.json  update-stats-mlb.json  update-stats-nba.json
engine/shared/: constants.py  date_utils.py  db_utils.py  game_utils.py  get_today_games.py  my_types.py  pubsub_utils.py  redis.py  redis_cache_utils.py  redis_pubsub_utils.py  socket_utils.py  tables.py  utils.py
engine/shared/prop_generation/: base.py  features.py  generator.py  registry.py
engine/shared/tests/: main.py
engine/system/: constants.py  finalize_parlays.py  resolve_matches.py  resolve_parlay_picks.py  resolve_parlays.py  update_matches.py  update_parlay_picks.py  update_parlays.py
marketing/: package.json  pnpm-lock.yaml
mobile/: package-lock.json  package.json  themes.ts
native-app/: package-lock.json  package.json  requestMethods.ts
orchestration/: baseball_utils.py  basketball_utils.py  constants.py  extract_stats.py  football_utils.py  pyproject.toml  redis_utils.py  time_utils.py  utils.py
orchestration/batch/: process_previous_day_stats.py  upsert_players.py
orchestration/cron/: insert_previous_day_stats.py  process_previous_day_stats.py  update_rosters.py  upsert_players.py
orchestration/data-pipeline/: matches_worker.py  parlays_worker.py  picks_worker.py  props_worker.py  webhook_server.py
orchestration/data_pipeline/: matches_poller.py  matches_worker.py  parlays_worker.py  picks_worker.py  props_worker.py  stats_poller.py  webhook_server.py
orchestration/db/: connection.py  games.py  players.py  props.py  teams.py
orchestration/db/stats/: baseball.py  basketball.py  football.py
orchestration/extract_stats/: __init__.py  baseball.py  basketball.py  football.py  main.py
orchestration/game_processing/: matches_resolver.py  parlays_updater.py  picks_updater.py  props_updater.py
orchestration/match_processing/: matches_resolver.py  parlays_resolver.py
orchestration/my_types/: server.py
orchestration/notification_services/: broadcast_notifier.py  daily_props_notifier.py  match_requirements_notifier.py
orchestration/prop_generation/config/: baseball_configs.py  basketball_configs.py  football_configs.py
orchestration/prop_generation/configs/: baseball.py  basketball.py  football.py
orchestration/prop_generation/generator/: base.py  base_generator.py  features.py  main.py  registry.py
orchestration/prop_generation/services/: baseball.py  basketball.py  football.py
orchestration/prop_generation/sports/: baseball.py  basketball.py  football.py
orchestration/scripts/mlb/: insert_teams.py
orchestration/seed/: image_scraper.py  insert_teams.py  player_image_scraper.py  process_games.py  team_color_scraper.py  team_image_scraper.py
orchestration/shared/: game_processor.py
orchestration/streaming/: matches_resolver.py  parlays_updater.py  props_updater.py
orchestration/tests/: test_baseball_prop_generation.py  test_basketball_prop_generation.py  test_football_prop_generation.py  test_get_active_players.py  test_player_image_scraper.py  test_team_image_scraper.py
python/: nba_constants.py  nba_get_previous_day_data.py  nba_init_games.py  nba_init_teams.py  nba_prop_generation.md  nba_tables.py  utils.py
scripts/: constants.py  generate_nba_props.py  get_previous_day_data.py  init_nba_games.py  init_nba_player_stats.py  init_nba_players.py  init_nba_teams.py  live_game_updates.py  my_types.py  nba_constants.py  nba_eligibility.py  nba_generate_props.py  nba_init_player_stats.py  nba_init_players.py  nba_regression.py  nba_types.py  nba_update_live_stats.py  nba_update_players.py  requirements.txt  tables.py  tempCodeRunnerFile.py  update_live_nba_props.py  update_nba_players.py  update_nba_props.py  update_nba_props_current_vals.py  upsert_nba_players.py  upsert_nba_props.py  upsert_previous_day_data.py  utils.py
server/: .gitignore  drizzle.config.js  package-lock.json  package.json  tsconfig.json
(+652 files in other folders)
